--- a/requirements.txt
+++ b/requirements.txt
@@ -1,219 +1,24 @@
-absl-py==1.4.0
-altair==5.1.1
-anyio==4.0.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==23.1.0
-Babel==2.13.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==6.1.0
-blinker==1.6.2
-blis==0.9.1
-bs4==0.0.1
-CacheMan==2.2.0
-cachetools==5.3.0
-catalogue==2.0.7
-certifi==2021.10.8
-cffi==1.15.1
-charset-normalizer==2.0.12
-click==8.1.3
-colorama==0.4.4
-comm==0.1.4
-confection==0.0.1
-cryptography==41.0.1
-cycler==0.10.0
-cyhunspell==2.0.2
-cymem==2.0.6
-Cython==0.29.28
-debugpy==1.8.0
-decorator==5.0.9
-defusedxml==0.7.1
-docx-mailmerge==0.5.0
-docx-mailmerge2==0.6.2
-docx2pdf==0.1.8
-ecdsa==0.18.0
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl
-enum-compat==0.0.3
-et-xmlfile==1.1.0
-exceptiongroup==1.1.3
-fastjsonschema==2.18.1
-Flask==2.2.3
-flatbuffers==23.1.21
-fqdn==1.5.1
-future==0.18.3
-gast==0.4.0
-gensim==4.2.0
-gitdb==4.0.10
-GitPython==3.1.36
-google-auth==2.16.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.51.1
-h5py==3.8.0
-idna==3.3
+blinker==1.6.3
+click==8.1.7
+colorama==0.4.6
+flask==3.0.0
 importlib-metadata==6.8.0
-intuit-oauth==1.2.4
-ipykernel==6.25.2
-ipython==7.26.0
-ipython-genutils==0.2.0
-isodate==0.6.1
-isoduration==20.11.0
 itsdangerous==2.1.2
-jedi==0.18.0
 Jinja2==3.1.2
-joblib==1.0.1
-Js2Py==0.74
-json5==0.9.14
-jsonify==0.5
-jsonpointer==2.4
-jsonschema==4.19.0
-jsonschema-specifications==2023.7.1
-jupyter-events==0.7.0
-jupyter-lsp==2.2.0
-jupyter_client==8.4.0
-jupyter_core==5.4.0
-jupyter_server==2.7.3
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.7
-jupyterlab-pygments==0.2.2
-jupyterlab_server==2.25.0
-keras==2.11.0
-kiwisolver==1.3.1
-langcodes==3.3.0
-libclang==15.0.6.1
-lxml==4.9.2
-Markdown==3.4.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.1
-matplotlib==3.4.3
-matplotlib-inline==0.1.2
-mdurl==0.1.2
-mistune==3.0.2
-murmurhash==1.0.7
-nbclient==0.8.0
-nbconvert==7.9.2
-nbformat==5.9.2
-nest-asyncio==1.5.8
+joblib==1.3.2
+MarkupSafe==2.1.3
 nltk==3.8.1
-notebook==7.0.5
-notebook_shim==0.2.3
-numpy==1.21.0
-oauthlib==3.2.2
-opencv-contrib-python==4.5.3.56
-opencv-python==4.5.3.56
-openpyxl==3.1.2
-opt-einsum==3.3.0
-overrides==7.4.0
-packaging==21.3
-pandas==1.3.1
-pandocfilters==1.5.0
-parso==0.8.2
-pathy==0.6.1
-pdfrw==0.4
-pickleshare==0.7.5
-Pillow==8.3.1
-platformdirs==3.8.0
-preshed==3.0.6
-prometheus-client==0.17.1
-prompt-toolkit==3.0.19
-protobuf==4.24.3
-psutil==5.9.4
-py-mini-racer==0.6.0
-pyarrow==13.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pycryptodome==3.18.0
-pydantic==1.8.2
-pydeck==0.8.0
-pyenchant==3.2.2
-PyExecJS==1.5.1
-Pygments==2.16.1
-pyjsparser==2.7.1
-PyJWT==2.7.0
-Pympler==1.0.1
-pyparsing==2.4.7
-PyPDF2==3.0.1
-pyqb==0.2.5
+numpy==1.26.1
+pandas==2.1.2
 python-dateutil==2.8.2
-python-docx==0.8.11
-python-jose==3.3.0
-python-json-logger==2.0.7
-python-quickbooks==0.9.3
-pytz==2021.1
-pytz-deprecation-shim==0.1.0.post0
-pywin32==301
-pywinpty==2.0.12
-PyYAML==6.0.1
-pyzmq==25.1.1
-rauth==0.7.3
-referencing==0.30.2
-regex==2022.4.24
-requests==2.31.0
-requests-file==1.5.1
-requests-oauthlib==1.3.1
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.5.3
-rpds-py==0.10.3
-rsa==4.9
-scikit-learn==0.24.2
-scipy==1.7.1
-Send2Trash==1.8.2
-simple-salesforce==1.12.4
-simplejson==3.19.1
+pytz==2023.3.post1
+regex==2023.10.3
+scikit-learn==1.3.2
+scipy==1.11.3
 six==1.16.0
-sklearn==0.0
-smart-open==5.2.1
-smmap==5.0.1
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-spacy==3.4.1
-spacy-legacy==3.0.9
-spacy-loggers==1.0.2
-srsly==2.4.3
-stdiomask==0.0.6
-streamlit==1.26.0
-tenacity==8.2.3
-tensorboard==2.11.2
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.11.0
-tensorflow-estimator==2.11.0
-tensorflow-intel==2.11.0
-tensorflow-io-gcs-filesystem==0.30.0
-termcolor==2.2.0
-terminado==0.17.1
-thinc==8.1.1
-threadpoolctl==2.2.0
-tinycss2==1.2.1
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.0
-tornado==6.3.3
-tqdm==4.64.0
-traitlets==5.11.2
-typer==0.4.1
-types-python-dateutil==2.8.19.14
-typing_extensions==4.2.0
+sklearn==0.0.post10
+threadpoolctl==3.2.0
+tqdm==4.66.1
 tzdata==2023.3
-tzlocal==4.3.1
-uri-template==1.3.0
-urllib3==1.26.9
-validators==0.22.0
-wasabi==0.9.1
-watchdog==3.0.0
-wcwidth==0.2.5
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.4
-Werkzeug==2.2.2
-wrapt==1.14.1
-xmltodict==0.13.0
-zeep==4.2.1
-zipp==3.5.0
+werkzeug==3.0.1
+zipp==3.17.0
