--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 blinker==1.6.3
 click==8.1.7
 colorama==0.4.6
-flask==3.0.0
+Flask==3.0.0
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
